<resources>
    <string name="app_name">Flujo login</string>
    <string name="login_text">Login</string>
    <string name="password_text">Password</string>
    <string name="login_forgot_password">Forgot password</string>
    <string name="login_get_new">Get new</string>
    <string name="login_account_text">Do you have an account?</string>
    <string name="login_create_text">Create new</string>
    <string name="registro_name">¿Como te llamas?</string>
    <string name="registro_last_name">¿Y tu apellido?</string>
    <string name="registro_edad">¿cuantos años tienes?</string>
    <string name="registro_btn">ME APUNTO!</string>
    <string name="registro_politica_privacidad">Politica de privacidad.</string>
    <string name="registro_condiciones_privacidad">Ver Condiciones</string>
    <string name="home_title">Upcoming meetups</string>
    <string name="home_card_view1_text1">USA. Los Angeles - 2 Weeks</string>
    <string name="home_card_view2_text1">Madives - 3 weeks</string>
    <string name="home_card_view1_text2">City of Los Angeles</string>
    <string name="home_card_view2_text2">Beach vacation</string>
    <string name="error">Usuario o contraseña incorrectos.</string>
    <string name="error2">Esta app no es para ti</string>
    <string name="error3">Por favor complete todos los campos</string>
    <string name="error4">Ups, no se aceptan las " @ " ni " ! ",disculpen las molestias</string>
    <string name="error5">Credenciales inválidas. Por favor intentelo de nuevo.</string>

</resources>