<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/login_image_login"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_image_login">

    </androidx.appcompat.widget.AppCompatImageView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:fontFamily="@font/autour_one"
        android:text="@string/login_text"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:fontFamily="@font/autour_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_image_login">

    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_input_layout_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="10dp"
        android:hint="@string/login_text"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_input_layout_username_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:hint="@string/password_text"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_input_layout_username"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password_input_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_btn_login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="25dp"
        android:backgroundTint="@color/black"
        android:enabled="false"
        android:text="@string/login_text"
        android:textColor="@color/white"
        app:fontFamily="@font/autour_one"
        app:icon="@drawable/baseline_arrow_forward_24"
        app:iconGravity="textEnd"
        app:iconTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_input_layout_password">

    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/login_forgot_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/login_forgot_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.409"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn_login"
        app:layout_constraintVertical_bias="0.0">

    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/login_get_now_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/login_get_new"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.669"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn_login"
        app:layout_constraintVertical_bias="0.0">

    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/login_account_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/login_account_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_forgot_password_text"
        app:layout_constraintVertical_bias="0.0">

    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/login_create_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/login_create_text"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.71"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_get_now_text"
        app:layout_constraintVertical_bias="0.0">

    </com.google.android.material.textview.MaterialTextView>


</androidx.constraintlayout.widget.ConstraintLayout>