<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/home_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/home_title"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/home_btn1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:backgroundTint="@color/home_color_btn1"
        app:cornerRadius="5dp"
        app:icon="@drawable/baseline_camera_alt_24"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/home_title"
        app:layout_constraintVertical_bias="0.022">

    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/home_btn2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:backgroundTint="@color/home_color_btn2"
        app:cornerRadius="5dp"
        app:icon="@drawable/baseline_favorite_24"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.326"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_title"
        app:layout_constraintVertical_bias="0.022">

    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/home_btn3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:backgroundTint="@color/home_color_btn3"
        app:cornerRadius="5dp"
        app:icon="@drawable/baseline_landscape_24"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.628"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_title"
        app:layout_constraintVertical_bias="0.022">

    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/home_btn4"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:backgroundTint="@color/home_color_btn4"
        app:cornerRadius="5dp"
        app:icon="@drawable/baseline_face_24"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.906"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_title"
        app:layout_constraintVertical_bias="0.022">

    </com.google.android.material.button.MaterialButton>

    <androidx.cardview.widget.CardView
        android:id="@+id/home_card_view1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_btn4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/home_card_view1_image1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/home_card1"

                >

            </androidx.appcompat.widget.AppCompatImageView>

            <TextView
                android:id="@+id/home_card_view1_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_card_view1_text1" />

            <TextView
                android:id="@+id/home_card_view1_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_card_view1_text2"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/home_card_view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_card_view1"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/home_card_view2_image1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/home_card1"

                >

            </androidx.appcompat.widget.AppCompatImageView>

            <TextView
                android:id="@+id/home_card_view2_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_card_view1_text1" />

            <TextView
                android:id="@+id/home_card_view2_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_card_view1_text2"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>